# ritmo3

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  RITMO3_CONTEXT.md  new_db.sh  rwf.html
.github/: copilot-instructions.md
doc/: ARCHITECTURE.md  IMPORT_FORMAT.md  RITMO_CORE.md  RITMO_DB.md  RITMO_DOMAIN.md  RITMO_ERRORS.md  RITMO_PRESENTER.md  RITMO_REPOSITORY.md  RITMO_TUI.md
doc/import_templates/: books.toml  people.toml
ritmo_app/: Cargo.toml
ritmo_app/src/: main.rs
ritmo_core/: Cargo.toml
ritmo_core/src/: book.rs  content.rs  content_type.rs  format.rs  genre.rs  language.rs  lib.rs  lookup.rs  person.rs  place.rs  publisher.rs  rel_book_content.rs  rel_book_language.rs  rel_book_person.rs  rel_book_tag.rs  rel_content_language.rs  rel_content_person.rs  rel_content_tag.rs  rel_person_language.rs  role.rs  series.rs  tag.rs
ritmo_db/: Cargo.toml
ritmo_db/schema/: schema.sql  seed_lookups.sql  seed_page_fields.sql
ritmo_db/src/: lib.rs
ritmo_domain/: Cargo.toml
ritmo_domain/src/: filter.rs  lib.rs
ritmo_errors/: Cargo.toml
ritmo_errors/src/: lib.rs  reporter.rs
ritmo_import/: Cargo.toml
ritmo_import/src/: import_books.rs  import_people.rs  main.rs  model.rs  reporter.rs
ritmo_presenter/: Cargo.toml
ritmo_presenter/locales/: en.yml
ritmo_presenter/src/: book.rs  common.rs  content.rs  form.rs  format.rs  genre.rs  i18n.rs  language.rs  lib.rs  person.rs  place.rs  publisher.rs  role.rs  series.rs  tag.rs
ritmo_repository/: Cargo.toml
ritmo_repository/src/: alias.rs  book.rs  content.rs  content_type.rs  entities.rs  filter.rs  filter_books.rs  filter_contents.rs  filter_sets.rs  format.rs  genre.rs  language.rs  lib.rs  person.rs  place.rs  place_type.rs  publisher.rs  relations.rs  role.rs  series.rs  support.rs  tag.rs  x_book_languages.rs  x_books_contents.rs  x_books_people_roles.rs  x_books_tags.rs  x_content_languages.rs  x_contents_people_roles.rs  x_contents_tags.rs  x_person_languages.rs  x_person_places.rs  x_publisher_places.rs
ritmo_tui/: Cargo.toml
ritmo_tui/src/: app.rs  lib.rs
ritmo_tui/src/screens/: mod.rs
ritmo_tui/src/screens/books/: detail.rs  list.rs
ritmo_tui/src/screens/contents/: create.rs  detail.rs  list.rs
ritmo_tui/src/screens/entities/: formats.rs  genres.rs  languages.rs  mod.rs  publishers.rs  roles.rs  series.rs  tags.rs
ritmo_tui/src/screens/people/: create.rs  detail.rs  list.rs
ritmo_tui/src/widgets/: input.rs  language.rs  mod.rs  partial_date.rs  person.rs  place.rs  popup.rs  statusbar.rs  table.rs
ritmo_web/: Cargo.toml
ritmo_web/src/: error.rs  main.rs  router.rs  state.rs
ritmo_web/src/handlers/: books.rs  contents.rs  dev.rs  languages.rs  lookups.rs  mod.rs  people.rs  people_roles.rs  places.rs  publishers.rs  tags.rs
ritmo_web/src/templates/: base.html
ritmo_web/src/templates/books/: detail.html  form.html  list.html
ritmo_web/src/templates/contents/: detail.html  form.html  list.html
ritmo_web/src/templates/people/: detail.html  form.html  list.html
ritmo_web/templates/: base.html
ritmo_web/templates/books/: detail.html  form.html  list.html  list_rows.html  popup.html
ritmo_web/templates/contents/: detail.html  list.html  list_rows.html  popup.html
ritmo_web/templates/dev/: widgets.html
ritmo_web/templates/lookups/: list.html
ritmo_web/templates/people/: detail.html  list.html  list_rows.html  popup.html
ritmo_web/templates/publishers/: detail.html  list.html
ritmo_web/templates/widgets/: date_input.html  lang_list.html  lang_row.html  lang_search_panel.html  lang_search_results.html  lookup_search_results.html  lookup_select.html  people_roles_list.html  people_roles_row.html  people_roles_search_panel.html  people_search_results.html  place_list.html  place_row.html  place_row_edit.html  place_search_result_items.html  place_search_results.html  tag_badge.html  tag_list.html  tag_search_results.html
