[package]
name = "ritmo_db"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
ritmo_errors = { path = "../ritmo_errors" }
