[package]
name = "ritmo_repository"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
ritmo_domain = { path = "../ritmo_domain" }
ritmo_db = { path = "../ritmo_db" }
ritmo_errors = { path = "../ritmo_errors" }
