[package]
name = "ritmo_tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
ritmo_presenter = { path = "../ritmo_presenter" }
ritmo_core = { path = "../ritmo_core" }
ritmo_errors = { path = "../ritmo_errors" }
ritmo_domain = { path = "../ritmo_domain" }
