[package]
name = "ritmo_web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ritmo_web"
path = "src/main.rs"

[dependencies]
axum = "0.8"
dotenv = { package = "dotenvy", version = "0.15" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tera = "1"
ritmo_db = { path = "../ritmo_db" }
ritmo_errors = { path = "../ritmo_errors" }
ritmo_repository = { path = "../ritmo_repository" }
ritmo_presenter = { path = "../ritmo_presenter" }
ritmo_core = { path = "../ritmo_core" }
ritmo_domain = { path = "../ritmo_domain" }
